--- a/home-page-front/extras/docker/Dockerfile
+++ b/home-page-front/extras/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:10.15.2
 RUN npm install -g @angular/cli
+RUN apt update
+RUN apt install netcat -y
 EXPOSE 4200
 WORKDIR /home-page-front
 ENTRYPOINT /bin/bash -c "chmod +x /home-page-front/extras/docker/setup.sh && /home-page-front/extras/docker/setup.sh"
