automation with terraform and ansible created; setup.sh renamed to entrypoint.sh

--- a/automations/docker/Dockerfile
+++ b/automations/docker/Dockerfile
@@ -4,7 +4,7 @@ RUN apt install nginx -y
 RUN apt install vim -y
 RUN apt install netcat -y
 
-RUN mkdir -p /home-page-stag /opt/ltt/
+RUN mkdir -p /home-page-stage /opt/ltt/
 
 EXPOSE 80
-ENTRYPOINT /bin/bash -c "chmod +x /home-page-stag/docker/setup.sh && /home-page-stag/docker/setup.sh"
+ENTRYPOINT /bin/bash -c "chmod +x /home-page-stage/docker/entrypoint.sh && /home-page-stage/docker/entrypoint.sh"
