--- a/automations/nginx/nginx.conf
+++ b/automations/nginx/nginx.conf
@@ -33,6 +33,7 @@ http {
 
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
 	ssl_prefer_server_ciphers on;
+	ssl_ciphers         HIGH:!aNULL:!MD5;
 
 	##
 	# Logging Settings
