--- a/home-page-back/extras/docker/Dockerfile
+++ b/home-page-back/extras/docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM golang:stretch
 RUN apt update
-RUN apt install netcat -y
 RUN apt install sqlite3 -y
 
 RUN mkdir -p /opt/ltt/home-page-back/configs/
 RUN mkdir -p /opt/ltt/home-page-back/dbs/
+RUN rm -r /go/src/
 WORKDIR /home-page-back
 
 ENTRYPOINT /bin/bash -c "chmod +x /home-page-back/extras/docker/entrypoint.sh && /home-page-back/extras/docker/entrypoint.sh"
