--- a/home-page-back/extras/docker/Dockerfile
+++ b/home-page-back/extras/docker/Dockerfile
@@ -4,6 +4,8 @@ RUN apt install sqlite3 -y
 
 RUN mkdir -p /opt/ltt/home-page-back/configs/
 RUN mkdir -p /opt/ltt/home-page-back/dbs/
+RUN mkdir -p /etc/home-page-back
+RUN mkdir -p /var/log/home-page-back
 RUN rm -r /go/src/
 WORKDIR /home-page-back
 
