--- a/home-page-front/package.json
+++ b/home-page-front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "core-js": "^2.6.9",
+    "ngx-mask": "^8.0.2",
     "reset-css": "^4.0.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
